# skymap

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: beam_jan_2026.ipynb  commission_jan_2026.ipynb  plot_sky_coverage_jan13_19.py  pointing_data_tests.ipynb  pointing_offset.ipynb
outputs/: beam_fit_params_ra.json
src/skymap/: Beam.py  Calibrator.py  PlotUtils.py  __init__.py  beam_methods.md  healmap.py  io.py  pf_pointing.cat  plot_utils.py  plots.py  utils.py
tests/: README.md  __init__.py  pytest.ini  run_tests.py  test_plot_sky_coverage_jan13_19.py
