[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skymap"
version = "0.1.0"
description = "Simulation and Analysis tools for making the map of the radio sky at 310 MHz"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Akshatha Vydula", email = "akshatha.vydula@gmail.com"}
]
keywords = ["astronomy", "radio", "telescope", "sky-coverage", "healpix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astropy>=7.0.0",
    "numpy>=2.0.0",
    "healpy>=1.18.0",
    "matplotlib>=3.10.0",
    "h5py>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["skymap*"]
exclude = ["AltAzSim*"]

[tool.setuptools.package-data]
skymap = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
